# invisible-wroclaw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  proto2.py  pyproject.toml  settings.yaml
bot/: __init__.py  handlers.py  keyboard.py  photos.py
resources/: ui.json
utils/: __init__.py  config.py  db_manager.py  errors.py  gdrive.py  images_manager.py  logger.py  resizer.py  ui.py
