[project]
name = "invisible-wroclaw"
version = "0.1.0"
description = "Excursion Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "peewee>=3.18.2",
    "pillow>=11.3.0",
    "python-telegram-bot>=22.4",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit-hooks>=6.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]
